# lyricpad

./: README.md  pyproject.toml
src/lyricpad/: main.py  time.py  words.py
