[project]
name = "lyricpad"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paw", email = "paw@pawrequest.com" }
]
dependencies = [
    "nltk>=3.8.1",
    "cmudict>=1.0.15",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
